@@ -1798,7 +1798,10 @@ MagickExport size_t InterpretImageFilename(const ImageInfo *image_info,
   }
   for (q=filename; *q != '\0'; q++)
     if ((*q == '%') && (*(q+1) == '%'))
-      (void) CopyMagickString(q,q+1,(size_t) (MaxTextExtent-(q-filename)));
+      {
+        (void) CopyMagickString(q,q+1,(size_t) (MaxTextExtent-(q-filename)));
+        canonical=MagickTrue;
+      }
   if (canonical == MagickFalse)
     (void) CopyMagickString(filename,format,MaxTextExtent);
   return(strlen(filename));
